@@ -1,3 +1,7 @@
+DATE: 23-11-2005 23:50
+[dimeglio] Use ConfigParams class
+[dimeglio] Removed servietool instabce config params, put instance creation in script
+
 DATE: 08-07-2005 15:20
 [dimeglio] Merged from branch 1.2.2
 
